<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cameraFragmentCardConatiner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toTopOf="@id/cameraFragmentClearBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/cameraFragmentPreviewContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <TextView
                android:id="@+id/cameraFragmentCameraGuide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/camera_container_guide"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/cameraFragmentCameraGuideCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera_container_check_guide"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ProgressBar
                android:id="@+id/cameraFragmentProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:visibility="visible"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/cameraFragmentCheckBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_baseline_check_24"
        android:contentDescription="@string/process"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/cameraFragmentCamera"
        app:layout_constraintStart_toEndOf="@id/cameraFragmentCamera"
        />

    <Button
        android:id="@+id/cameraFragmentCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/camera"
        app:layout_constraintStart_toEndOf="@id/cameraFragmentClearBtn"
        app:layout_constraintEnd_toStartOf="@id/cameraFragmentCheckBtn"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/cameraFragmentClearBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/clear"
        android:background="@drawable/ic_baseline_clear_24_white"
        app:layout_constraintEnd_toStartOf="@id/cameraFragmentCamera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/cameraFragmentCamera"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cameraFragmentResultBox"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:visibility="gone"
        app:cardElevation="9dp"
        app:cardCornerRadius="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:layout_constraintEnd_toEndOf="@id/cameraFragmentCardConatiner"
        app:layout_constraintTop_toTopOf="@id/cameraFragmentCardConatiner"
        app:layout_constraintBottom_toBottomOf="@id/cameraFragmentCardConatiner"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/cameraFragmentResultBoxImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/placeholder"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/cameraFragmentResultBoxFlowerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Mawar"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_margin="3dp"
                app:layout_constraintStart_toStartOf="@id/cameraFragmentResultBoxImage"
                app:layout_constraintEnd_toEndOf="@id/cameraFragmentResultBoxImage"
                app:layout_constraintTop_toBottomOf="@id/cameraFragmentResultBoxImage"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>